--- a/streaming-endpoints/proto-reference.mdx
+++ b/streaming-endpoints/proto-reference.mdx
@@ -124,15 +124,15 @@ elif response.HasField('update'):
 #### BookEntry Message
 
 ```python
-# Access book entry fields
-px = bid.px / 1000  # Convert price
+# price_scale from instrument metadata (via list_instruments API)
+px = bid.px / price_scale
 qty = bid.qty
 symbol_sub_type = bid.symbol_sub_type
 ```
 
 | Field | Type | Description |
 |-------|------|-------------|
-| `px` | `int64` | **Price** (divide by 1000 for decimal value) |
+| `px` | `int64` | **Price** (divide by price_scale) |
 | `qty` | `int64` | Aggregate quantity at this price level |
 | `symbol_sub_type` | `str` | Symbol subtype (if applicable) |
 
@@ -167,19 +167,19 @@ if update.state == market_data_pb2.INSTRUMENT_STATE_OPEN:
 if update.HasField('stats'):
     stats = update.stats
 
-    # Check individual stat fields
+    # price_scale from instrument metadata
     if stats.HasField('last_trade_px'):
-        last_px = stats.last_trade_px / 1000
+        last_px = stats.last_trade_px / price_scale
         print(f"Last Trade: ${last_px:.4f}")
 ```
 
 | Field | Type | Description |
 |-------|------|-------------|
-| `open_px` | `int64` | Opening price (÷ 1000) |
-| `close_px` | `int64` | Closing price (÷ 1000) |
-| `low_px` | `int64` | Session low price (÷ 1000) |
-| `high_px` | `int64` | Session high price (÷ 1000) |
-| `last_trade_px` | `int64` | Last trade price (÷ 1000) |
+| `open_px` | `int64` | Opening price (÷ price_scale) |
+| `close_px` | `int64` | Closing price (÷ price_scale) |
+| `low_px` | `int64` | Session low price (÷ price_scale) |
+| `high_px` | `int64` | Session high price (÷ price_scale) |
+| `last_trade_px` | `int64` | Last trade price (÷ price_scale) |
 | `shares_traded` | `int64` | Total shares/contracts traded |
 | `open_interest` | `int64` | Current open interest |
 | `notional_traded` | `int64` | Total notional value traded |
@@ -265,7 +265,7 @@ print(f"Side: {orders_pb2.Side.Name(order.side)}")
 print(f"State: {orders_pb2.OrderState.Name(order.state)}")
 
 if order.price > 0:
-    price = order.price / 1000
+    price = order.price / order.price_scale
     print(f"Price: ${price:.4f}")
 ```
 
@@ -279,11 +279,11 @@ Key fields:
 | `type` | `OrderType` | Order type |
 | `side` | `Side` | BUY or SELL |
 | `order_qty` | `int64` | Original order quantity |
-| `price` | `int64` | **Limit price** (÷ 1000) |
+| `price` | `int64` | **Limit price** (÷ price_scale) |
 | `time_in_force` | `TimeInForce` | DAY, GTC, IOC, FOK, GTT |
 | `account` | `str` | Trading account identifier |
 | `cum_qty` | `int64` | Cumulative filled quantity |
-| `avg_px` | `int64` | **Average fill price** (÷ 1000) |
+| `avg_px` | `int64` | **Average fill price** (÷ price_scale) |
 | `leaves_qty` | `int64` | Remaining unfilled quantity |
 | `state` | `OrderState` | Current order state |
 | `insert_time` | `Timestamp` | When order was inserted |
@@ -296,7 +296,7 @@ exec_type = orders_pb2.ExecutionType.Name(execution.type)
 print(f"Execution Type: {exec_type}")
 
 if execution.last_shares > 0:
-    fill_px = execution.last_px / 1000
+    fill_px = execution.last_px / execution.order.price_scale
     print(f"Fill: {execution.last_shares} @ ${fill_px:.4f}")
 
 if execution.order_reject_reason != orders_pb2.ORD_REJECT_REASON_UNDEFINED:
@@ -310,7 +310,7 @@ if execution.order_reject_reason != orders_pb2.ORD_REJECT_REASON_UNDEFINED:
 | `type` | `ExecutionType` | Execution type |
 | `order` | `Order` | Current order state |
 | `last_shares` | `int64` | Quantity filled in this execution |
-| `last_px` | `int64` | **Fill price** (÷ 1000) |
+| `last_px` | `int64` | **Fill price** (÷ price_scale) |
 | `text` | `str` | Free-form text message |
 | `order_reject_reason` | `OrdRejectReason` | Rejection reason (if rejected) |
 | `transact_time` | `Timestamp` | Transaction timestamp |
@@ -430,18 +430,19 @@ if execution.order_reject_reason != orders_pb2.ORD_REJECT_REASON_UNDEFINED:
 ### Price Representation
 
 <Warning>
-**All prices are `int64` values scaled by 1000.**
+    **All prices are `int64` values.** Divide by the instrument's `price_scale` to get the decimal value.
 
-Prices are always between **$0.001 and $0.999 USD**.
+    `price_scale` varies by instrument. Get it from:
+    - Instrument metadata via `list_instruments` or `get_instrument_metadata`
+    - The `price_scale` field in order responses
 
-```python
-# Proto → Decimal
-decimal_price = int64_price / 1000
+    ```python
+    # Get price_scale from instrument or order
+    decimal_price = int64_price / price_scale
 
-# Example
-proto_price = 525
-decimal_price = 525 / 1000  # = $0.525
-```
+    # Example using order's price_scale
+    decimal_price = order.price / order.price_scale
+    ```
 </Warning>
 
 ### Timestamp Handling
@@ -461,8 +462,9 @@ if order.HasField('insert_time'):
 ```python
 # Use HasField() for optional fields
 if update.HasField('stats'):
+    # price_scale from instrument metadata
     if update.stats.HasField('last_trade_px'):
-        last_px = update.stats.last_trade_px / 1000
+        last_px = update.stats.last_trade_px / price_scale
 ```
 
 ---
