docs: Add Participant Agreement, Contact Form, and Corporate Application templates
- Created fillable template pages for partners to copy into Google Docs
- Updated navigation in docs.json to include new pages under Partner Guide > Onboarding
- Updated onboarding.mdx and onboarding-template.mdx with links to new templates
- Removed PDF references - all templates are now copy-to-Google-Doc format

--- a/getting-started/onboarding.mdx
+++ b/getting-started/onboarding.mdx
@@ -61,10 +61,10 @@ Create a Google Drive folder for your onboarding submission:
 2. Add the following files to the folder:
    - **Pre-production public key** (`{companyname}_preprod_public_key.pem`)
    - **Production public key** (`{companyname}_prod_public_key.pem`)
-   - **Onboarding Document** (`{companyname} Onboarding Document.pdf`) - following the [Onboarding Template](/isv-partners/onboarding-template)
-   - **Participant Agreement** (`{companyname} Participant Agreement`)
-   - **Contact Form** (`{companyname} Contact Form`)
-   - **Corporate Application** (`{companyname} Corporate Application`) - *only if applying as a corporate entity*
+   - **Onboarding Document** (`{companyname} Onboarding Document`) - following the [Onboarding Template](/isv-partners/onboarding-template)
+   - **[Participant Agreement](/isv-partners/participant-agreement)** (`{companyname} Participant Agreement`)
+   - **[Contact Form](/isv-partners/contact-form)** (`{companyname} Contact Form`)
+   - **[Corporate Application](/isv-partners/corporate-application)** (`{companyname} Corporate Application`) - *only if applying as a corporate entity*
 
 3. Share the folder with **Editor** access to: `onboarding@polymarket.com`
 
@@ -124,10 +124,10 @@ After your key is verified and configured:
 - [ ] Created Google Drive folder named "[Company Name] - Polymarket API Onboarding"
 - [ ] Uploaded `{companyname}_preprod_public_key.pem`
 - [ ] Uploaded `{companyname}_prod_public_key.pem`
-- [ ] Uploaded `{companyname} Onboarding Document.pdf`
-- [ ] Uploaded `{companyname} Participant Agreement`
-- [ ] Uploaded `{companyname} Contact Form`
-- [ ] Uploaded `{companyname} Corporate Application` (if corporate entity)
+- [ ] Uploaded `{companyname} Onboarding Document`
+- [ ] Uploaded `{companyname} Participant Agreement` ([template](/isv-partners/participant-agreement))
+- [ ] Uploaded `{companyname} Contact Form` ([template](/isv-partners/contact-form))
+- [ ] Uploaded `{companyname} Corporate Application` ([template](/isv-partners/corporate-application)) (if corporate entity)
 - [ ] Shared folder with `onboarding@polymarket.com` (Editor access)
 - [ ] Completed verification call with Polymarket team (both fingerprints verified)
 - [ ] Received Client IDs for preprod and production environments
