--- a/isv-partners/onboarding-template.mdx
+++ b/isv-partners/onboarding-template.mdx
@@ -5,17 +5,17 @@ description: 'Template for Partner onboarding submission'
 
 # Onboarding Document Template
 
-Copy this template into a Google Document named **"{Company Name} Onboarding Document"** and save as PDF for your onboarding folder.
+Copy this template into a Google Document named **"{Company Name} Onboarding Document"** and fill it out for your onboarding folder.
 
 <Info>
 **Required Documents**
 
 Your onboarding folder must also include:
-- Participant Agreement (`{companyname} Participant Agreement`)
-- Contact Form (`{companyname} Contact Form`)
-- Corporate Application (`{companyname} Corporate Application`) - *if applying as a corporate entity*
+- [Participant Agreement](/isv-partners/participant-agreement) (`{companyname} Participant Agreement`)
+- [Contact Form](/isv-partners/contact-form) (`{companyname} Contact Form`)
+- [Corporate Application](/isv-partners/corporate-application) (`{companyname} Corporate Application`) - *if applying as a corporate entity*
 
-Contact Polymarket to obtain these forms.
+Copy each template into a Google Document, fill it out, and include in your onboarding folder.
 </Info>
 
 ---
