fix: Replace curly braces with square brackets to fix MDX parsing

--- a/isv-partners/contact-form.mdx
+++ b/isv-partners/contact-form.mdx
@@ -5,7 +5,7 @@ description: 'Contact information form for Polymarket Exchange API onboarding'
 
 # Contact Form
 
-Copy this template into a Google Document named **"{Company Name} Contact Form"** for your onboarding folder.
+Copy this template into a Google Document named **"[Company Name] Contact Form"** for your onboarding folder.
 
 <Info>
 This form collects contact information for your organization. Both contacts will be verified during the onboarding call and will receive credentials.
