--- a/isv-partners/corporate-application.mdx
+++ b/isv-partners/corporate-application.mdx
@@ -5,7 +5,7 @@ description: 'Corporate entity application for Polymarket Exchange API access'
 
 # Corporate Application
 
-Copy this template into a Google Document named **"{Company Name} Corporate Application"** for your onboarding folder.
+Copy this template into a Google Document named **"[Company Name] Corporate Application"** for your onboarding folder.
 
 <Warning>
 **This form is required only for corporate entities.** Individual traders applying under their own name should skip this form.
