--- a/isv-partners/onboarding-template.mdx
+++ b/isv-partners/onboarding-template.mdx
@@ -5,15 +5,15 @@ description: 'Template for Partner onboarding submission'
 
 # Onboarding Document Template
 
-Copy this template into a Google Document named **"{Company Name} Onboarding Document"** and fill it out for your onboarding folder.
+Copy this template into a Google Document named **"[Company Name] Onboarding Document"** and fill it out for your onboarding folder.
 
 <Info>
 **Required Documents**
 
 Your onboarding folder must also include:
-- [Participant Agreement](/isv-partners/participant-agreement) (`{companyname} Participant Agreement`)
-- [Contact Form](/isv-partners/contact-form) (`{companyname} Contact Form`)
-- [Corporate Application](/isv-partners/corporate-application) (`{companyname} Corporate Application`) - *if applying as a corporate entity*
+- [Participant Agreement](/isv-partners/participant-agreement) (`[companyname] Participant Agreement`)
+- [Contact Form](/isv-partners/contact-form) (`[companyname] Contact Form`)
+- [Corporate Application](/isv-partners/corporate-application) (`[companyname] Corporate Application`) - *if applying as a corporate entity*
 
 Copy each template into a Google Document, fill it out, and include in your onboarding folder.
 </Info>
@@ -61,17 +61,17 @@ Copy each template into a Google Document, fill it out, and include in your onbo
 
 | Field | Value |
 |-------|-------|
-| **Public Key Filename** | `{companyname}_preprod_public_key.pem` |
+| **Public Key Filename** | `[companyname]_preprod_public_key.pem` |
 | **Key Generated Date** | |
-| **Key Fingerprint** | (output of `openssl rsa -pubin -in {companyname}_preprod_public_key.pem -fingerprint -noout`) |
+| **Key Fingerprint** | (output of `openssl rsa -pubin -in [companyname]_preprod_public_key.pem -fingerprint -noout`) |
 
 ### Production Key
 
 | Field | Value |
 |-------|-------|
-| **Public Key Filename** | `{companyname}_prod_public_key.pem` |
+| **Public Key Filename** | `[companyname]_prod_public_key.pem` |
 | **Key Generated Date** | |
-| **Key Fingerprint** | (output of `openssl rsa -pubin -in {companyname}_prod_public_key.pem -fingerprint -noout`) |
+| **Key Fingerprint** | (output of `openssl rsa -pubin -in [companyname]_prod_public_key.pem -fingerprint -noout`) |
 
 ## Use Case Description
 
