--- a/isv-partners/participant-agreement.mdx
+++ b/isv-partners/participant-agreement.mdx
@@ -5,7 +5,7 @@ description: 'Participant Agreement template for Polymarket Exchange API access'
 
 # Participant Agreement
 
-Copy this template into a Google Document named **"{Company Name} Participant Agreement"** for your onboarding folder.
+Copy this template into a Google Document named **"[Company Name] Participant Agreement"** for your onboarding folder.
 
 <Info>
 This agreement establishes the terms under which you will access and use the Polymarket Exchange API.
