fix: Replace < > symbols in revenue range to fix MDX parsing

--- a/isv-partners/corporate-application.mdx
+++ b/isv-partners/corporate-application.mdx
@@ -144,7 +144,7 @@ Individual with significant responsibility for managing the entity:
 | **Industry/Sector** | |
 | **Years in Operation** | |
 | **Number of Employees** | |
-| **Annual Revenue Range** | ☐ <$1M ☐ $1M-$10M ☐ $10M-$50M ☐ $50M-$100M ☐ >$100M |
+| **Annual Revenue Range** | Under $1M / $1M-$10M / $10M-$50M / $50M-$100M / Over $100M |
 
 ### Business Description
 
