docs: Add support contact to welcome page

--- a/index.mdx
+++ b/index.mdx
@@ -40,3 +40,6 @@ This guide provides a comprehensive overview of the Polymarket Exchange's platfo
 
 </Columns>
 
+---
+
+For integration support, contact **fix@qcex.com**
